--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ box-sizing: border-box;
 
 }
 body{
-
+background-color: hsl(0, 0%, 20%);
 width: 100vw;
 height:100vh;
 /*para centrar el elemento hijo*/
